--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <font color="#FF0000">    
 <span class="say"><h1>我希望有个如你一般的人。</h1></span><br><br>
 <span class="say">我希望有个如你一般的人。</span><br> <br>    
-<span class="say">如这山间清晨一般明亮清爽，</span><br><br>
-<span class="say">如奔赴古城道路上阳光一般的人，</span><br><br>
-<span class="say">温暖而不炙热，覆盖我所有肌肤。</span><br><br>
-<span class="say">由起点到夜晚，由山野到书房，一切问题的答案都很简单。</span><br><br>
-<span class="say">我希望有个如你一般的人，贯彻未来，数遍生命的公路牌。</span><br><br>
-<span class="say"><span class="space"></span> -- 来自你的猪猪--</span><br>
+<span class="say">如这麓山间清晨一般明亮清爽，</span><br><br>
+<span class="say">如爱晚亭午后阳光一般温柔知性，</span><br><br>
+<span class="say">如湘江畔晚间微风一般乖巧可人。</span><br><br>
+<span class="say">由清晨到夜晚，由山野到书房，一切问题的答案都很简单。</span><br><br>
+<span class="say">我希望有个如你一般的人，相聚麓山下，相随湘江畔。</span><br><br>
+<span class="say"><span class="space"></span> -- 来自你的猪猪 --</span><br>
 <span class="say"><h1>如意，我爱你!</h1></span><br>
         </font>
       </div>
